--- a/css/editor.css
+++ b/css/editor.css
@@ -1,7 +1,7 @@
 .ace_editor {
     position: relative;
     overflow: hidden;
-    font-family: 'Ubuntu Mono', 'Menlo', 'Monaco', 'Consolas', 'source-code-pro', monospace;
+    font-family: 'Oxygen Mono', 'Ubuntu Mono', 'Menlo', 'Monaco', 'Consolas', 'source-code-pro', monospace;
     font-size: 18px;
     line-height: normal;
     direction: ltr;
